--- a/camel-b/pom.xml
+++ b/camel-b/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>camel-b</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jackson-starter</artifactId>
+            <version>4.14.0</version>
+        </dependency>
     </dependencies>
 
 </project>
