--- a/camel-b/src/main/resources/application.properties
+++ b/camel-b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=camel-b
-spring.activemq.broker-url=tcp://localhost:61616
+#spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://localhost:57899
 server.port=6002
